k8s/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  namespace: restaurant-platform
  labels:
    app: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
        - name: backend
          image: sestan/restaurant-backend:1.0.4
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8000
              name: http
          volumeMounts:
            - name: media-storage
              mountPath: /app/media
          livenessProbe:
            tcpSocket:
              port: 8000
            initialDelaySeconds: 45
            periodSeconds: 15
          readinessProbe:
            tcpSocket:
              port: 8000
            initialDelaySeconds: 15
            periodSeconds: 10
      volumes:
        - name: media-storage
          persistentVolumeClaim:
            claimName: media-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: backend-service
  namespace: restaurant-platform
  labels:
    app: backend
spec:
  ports:
    - port: 8000
      targetPort: 8000
  selector:
    app: backend
  type: ClusterIP
